ajustes de diseño

--- a/src/styles/tasksPage.css
+++ b/src/styles/tasksPage.css
@@ -64,7 +64,7 @@
   color: #333;
 }
 
-.task-card.en\ progreso .status {
+.task-card.progreso .status {
   background-color: #29b6f6;
   color: #fff;
 }
